--- a/openpublishing/test/404.md
+++ b/openpublishing/test/404.md
@@ -1,3 +1,8 @@
+---
+layout: HubPage
+---
 # Content not found!
 
 **This is a customized 404 page.**
+
+The URL might be misspelled, or the page you're looking for is no longer available.
