--- a/openpublishing/test/404.md
+++ b/openpublishing/test/404.md
@@ -12,6 +12,8 @@ layout: HubPage
                 </div>
             </div>
         </div>
+    </div>
+    <div class="section">
         <div class="row">
             <div class="col-sm-12 col-md-12">
                 The URL might be misspelled, or the page you're looking for is no longer available.
